# tricore-qemu

accel/tcg/: cputlb.c
hw/tricore/: Kconfig  meson.build  pcp.c  pcp.h  tc1797_adc.c  tc1797_adc.h  tc1797_asc.c  tc1797_asc.h  tc1797_can.c  tc1797_can.h  tc1797_dma.c  tc1797_dma.h  tc1797_eray.c  tc1797_eray.h  tc1797_fadc.c  tc1797_fadc.h  tc1797_gpta.c  tc1797_gpta.h  tc1797_jtag.c  tc1797_jtag.h  tc1797_mli.c  tc1797_mli.h  tc1797_reset_seed.h  tc1797_soc.c  tc1797_write_mask.h  tricore_soc.h
scripts/: symlink-install-tree.py
